--- a/Mycss/portfolio.css
+++ b/Mycss/portfolio.css
@@ -7,6 +7,8 @@
   margin: 0 0 10px 0;
   border:  aquamarine solid;
   border-radius: 30px;
+  height: 300px;
+  width: 350px;
 }
 .mur{
   position: relative;
@@ -58,14 +60,20 @@ h3{
   h3{
     left: auto;
     right: auto;
+    width: 300px;
+    height: 250px;
   }
   .port img{
     margin: 0 auto 10px auto;
+    width: 300px;
+    height: 250px;
   }
-
+.port{
+  width: auto;
+}
   .description{
     margin: 0 auto 10px auto;
-    width: 320px;
+    width: 300px;
   }
 }
 
